syntax = "proto3";

package modules.identities.internal.transactions.deputize;

import "gogoproto/gogo.proto";
import "persistence_sdk/schema/types/base/id.proto";
import "persistence_sdk/schema/types/base/properties.proto";

option go_package = "github.com/persistenceOne/persistenceSDK/modules/identities/internal/transactions/deputize";

message Message {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.equal) = false;

  string from = 1 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/types/base.AccAddress", (gogoproto.nullable) = false, (gogoproto.moretags) = "valid:\"required~required field from missing\""] ;
  persistence_sdk.schema.types.base.ID from_i_d = 2 [(gogoproto.nullable) = false, (gogoproto.moretags) = "valid:\"required~required field fromID missing\""] ;
  persistence_sdk.schema.types.base.ID to_i_d = 3 [(gogoproto.nullable) = false, (gogoproto.moretags) = "valid:\"required~required field toID missing\""] ;
  persistence_sdk.schema.types.base.ID classification_i_d = 4 [(gogoproto.nullable) = false, (gogoproto.moretags) = "valid:\"required~required field classificationID missing\""] ;
  persistence_sdk.schema.types.base.Properties maintained_properties = 5 [(gogoproto.nullable) = false, (gogoproto.moretags) = "valid:\"required~required field maintainedProperties missing\""] ;
  bool add_maintainer = 6;
  bool  remove_maintainer = 7;
  bool mutate_maintainer = 8;
}

message TransactionResponse{}

service Msg{
  rpc Deputize(Message) returns (TransactionResponse);
}
